--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ textarea {
   color: #fff;
   margin-bottom: 12px;
   line-height: 1.15;
-  white-space: nowrap;
+  white-space: normal;
 }
 #typing-text {
   border-right: none;
